# open-roots-graph

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pod.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: assistant.py  evidence.py  individual.py  migration.py  pedigree.py  place.py  quality.py  research_priority.py  source.py  timeline.py
backend/app/quality_engine/: __init__.py  checks.py  models.py  normalizers.py  runner.py
backend/app/repositories/: base.py  evidence_repo.py  individual_repo.py  migration_repo.py  pedigree_repo.py  place_repo.py  quality_repo.py  research_priority_repo.py  timeline_repo.py
backend/app/routers/: assistant.py  evidence.py  graph.py  individuals.py  migration.py  pedigree.py  places.py  quality.py  research_priority.py  stats.py  timeline.py
backend/app/services/: assistant_service.py  conflict_detection.py  cypher_sanitizer.py  geocoding.py  priority_scorer.py  quality_scorer.py  schema_introspector.py
backend/scripts/: audit_data.py  detect_conflicts.py  export_gedcom.py  geocode_places.py  import_tree.py  migrate_legacy_claims.py  quality_report.py  seed_evidence_schema.py  standardize_dates.py
backend/tests/: test_cypher_sanitizer.py  test_import_tree.py  test_quality_engine.py
docs/: data-quality-checks.md
examples/: sample-tree.ged
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  (+1 more)
(+18 files in other folders)
